pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployement
  namespace: exercises
  labels:
    app: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - name: pingpong
        image: pingpong:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
