pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  selector:
    app: pingpong
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
