pingpong/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pingpong-route
  namespace: exercises
spec:
  parentRefs:
  - name: app-gateway
    namespace: exercises
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    - path:
        type: PathPrefix
        value: /pings
    backendRefs:
    - name: pingpong-service
      port: 8080
