pingpong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ingress
  namespace: exercises
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 8080
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 8080
      - path: /pings
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 8080
